--- a/adaptive.css
+++ b/adaptive.css
@@ -1,7 +1,7 @@
 @media screen and (min-width: 0) and (max-width: 750px), only screen and (max-device-width: 750px) and (min-device-width: 0px) {
 
     body {
-        min-width: 650px;
+        min-width: 0;
     }
     
 	.header-logo, .menu, .header-desc, .items-wrapper, .items-block, .feedback-block, .about-us, .footer-wrapper {
